variables.RunFour.scala.error
Compilation error:
RunFour:1: error: not found: value baggleCount
baggleCount = 0
^RunFour:3: error: not found: value baggleCount
while(baggleCount() < 4) {
      ^RunFour:6: error: not found: value baggleCount
    baggleCount = baggleCount + 1
    ^